this is a good practice and analysis

--- a/scripts/R06_beta_diversity_diet_and_microbiome__code_for_Figure_S3.Rmd
+++ b/scripts/R06_beta_diversity_diet_and_microbiome__code_for_Figure_S3.Rmd
@@ -161,6 +161,8 @@ stool_filtered_df <- df_pair_stool %>%
 joined <- stool_filtered_df %>% 
   rename(stool_dist = distance) %>% 
   full_join(diet_filtered_df %>% rename(diet_dist = distance))
+
+joined %>% write_csv('../data/R06_joined_diet_stool_distance_to_earliest.csv')
  
 ```
 
